feat/adding title and paragraphs to index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Starter Pack</title>
 </head>
 <body>
-    
-
     <script src="./script.js"></script>
+    <h1>Titre</h1>
+    <p>Paragraphe</p>
+    <p>Paragraphe</p>
 </body>
 </html>
